# rust-api-actix-example

./: Cargo.toml  docker-compose.yaml
src/: main.rs
src/controllers/: mod.rs  users.rs
src/models/: users.rs
src/services/: mongo.rs
